# ChangeLog for www-plugins/gnash
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-plugins/cvs-repo/gentoo-x86/www-plugins/gnash/ChangeLog,v 1.35 2010/07/19 23:16:32 chithanh Exp $

  19 Jul 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.7_p20100706.ebuild:
  don't install plugin to /opt, bug #328595

  19 Jul 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.7_p20100706.ebuild:
  check for agg USE flag when vaapi is enabled

  14 Jul 2010; Jeroen Roovers <jer@gentoo.org> gnash-0.8.5.ebuild,
  gnash-0.8.6.ebuild, gnash-0.8.7.ebuild, gnash-0.8.7_p20100706.ebuild:
  Remove HPPA keywording.

  13 Jul 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.7_p20100706.ebuild:
  Require USE=opengl for xv support

  13 Jul 2010; Jeroen Roovers <jer@gentoo.org> gnash-0.8.7_p20100706.ebuild:
  Remove extra slash.

*gnash-0.8.7_p20100706 (12 Jul 2010)

  12 Jul 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +gnash-0.8.7_p20100706.ebuild, +files/gnash-0.8.8-klash.patch,
  metadata.xml:
  New snapshot. Adds support for accelerated video decode through VAAPI.

  02 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  +files/gnash-0.8.x-libpng14.patch, gnash-0.8.5.ebuild, gnash-0.8.6.ebuild:
  Fix building with libpng14 wrt #326599 by Serhij S. Stasyuk.

  27 Jun 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.7.ebuild:
  depend on libsdl when gtk and kde frontends are disabled, bug #325445

  21 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> gnash-0.8.7.ebuild:
  Fix building with FFmpeg >= 0.6 wrt #324357 by Diego E. Pettenò.

  01 May 2010; Maciej Mrozowski <reavertm@gentoo.org> gnash-0.8.5.ebuild,
  gnash-0.8.6.ebuild, gnash-0.8.7.ebuild:
  CMAKE_REQUIRED can be 'always' or 'never'

  24 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.7.ebuild:
  update USE flag checks more
