@@ -15,9 +15,9 @@ DIST gnash-0.8.5.tar.bz2 3335797 RMD160 8ef599237c3162f9f28459855e4729d400bd4304
 DIST gnash-0.8.6.tar.bz2 3571055 RMD160 987342b6cc46e94d5684d917bebbe6f6da6033bf SHA1 11c115f45b3803b157f65f30f1f65d26fea34328 SHA256 05f4b75eb2a5bc543fcd743641825147ce5e1b0bf675896e01401556a85332ea
 DIST gnash-0.8.7.tar.bz2 3617298 RMD160 809e5dcf6f11567f7463d1e772053aa54f7170ed SHA1 bba6245ce251730fd58a59b37609ca4b8898ae01 SHA256 73b8a7c788511e453add26fd68cebd5818b39f9da21cc7c78e9cef8bc837e896
 DIST gnash-0.8.7_p20100706.tar.xz 3923900 RMD160 2b8d2fd3a108a9163b3ba96bc245f5f275213b81 SHA1 817bbf050624e119c7b84d45739ec0d28c78906e SHA256 ff993a256a2c5e12727f635951d4426eb79418b80bd94db978fcee6c1778e034
-EBUILD gnash-0.8.5.ebuild 6859 RMD160 567e551bee105e97d62318041141e91e913f26cc SHA1 130516e10b83d3d146e99b4e58286168f36c8710 SHA256 8f4c9fb30eb24d2b8fff284bb348296d77f279ba308211e447160a2240c4f26d
-EBUILD gnash-0.8.6.ebuild 7746 RMD160 6b06a22fa4dbf7c839a706ae4e74f0ffc05afa4a SHA1 3d971d95a41c5b2f6d2637db8f9c65e458bf4293 SHA256 208fed4d62a6513fca4ee84f04bcee93a7e6b263ff90acf1e8bee226d0ac3461
-EBUILD gnash-0.8.7.ebuild 8011 RMD160 d0343a6e8854640a17b0298befb7905544278371 SHA1 32d67037568c3c22469b7ebcd6a29bbe336c8c0e SHA256 738c175f61ccf1780c4a1ab877aee13571f5970e12e14d2c192280236c344a89
-EBUILD gnash-0.8.7_p20100706.ebuild 7772 RMD160 b36c43159c503a4a13f61e8641f8896f0b1e96ef SHA1 709757bf9cd66cf14c6433b924a6f509573d82ee SHA256 cb387637df4d39a1422b1cc19a860bd6cbc704d8252df669c3df88e86ee5e695
-MISC ChangeLog 18635 RMD160 22d733dddfb5a161767a39b2358b63e357fb0838 SHA1 9e10c01d52dd8ff39b88e471029cfbc731bcd502 SHA256 ea985af8489127ced49716d99cb33472b30aa8cf0201a7eb359bb9d96ee0137b
+EBUILD gnash-0.8.5.ebuild 6847 RMD160 a5c919db8f2000ccdd69c506a3e1e4c38575d899 SHA1 cca2bff47f3e59042b7b09b0d1c6963d54964a77 SHA256 5bc8619c682951efa4b796aabf1c365b0180bfd8599c9551468dbee2dc37b5ab
+EBUILD gnash-0.8.6.ebuild 7734 RMD160 54bd6b432b08a227025c81ac45d3dce6f954dd47 SHA1 1451d7b0ecbda031d6caae2f55e8dea79a8b1c15 SHA256 8976a9da33c75dcd304680f0ebb890f0edb57ad728146445230ff407282efa39
+EBUILD gnash-0.8.7.ebuild 7999 RMD160 bbfaeeca8b37cf17c191e3716b71ab69666f724e SHA1 09647562aeb72c43fffa1b1e4e2fcddd8a0bf8cc SHA256 e19effc6f1676e74521d032b24c2b4482da4cc650888477294eebd2e88063bfa
+EBUILD gnash-0.8.7_p20100706.ebuild 7755 RMD160 3206440dd3d01ec5e080522176e627ce84944fbc SHA1 d99a890972bbf55b8fd37a78511198861156ef11 SHA256 85210eb3caade0bed69e1d55de9043e11b09e538b5e921eedbf6928f7687cb68
+MISC ChangeLog 18823 RMD160 ffa8b4cc014dbe7b2222086e1a11a9aca3f15040 SHA1 1a7ba376d6d8ab842af11cb62809ba507b10d3e4 SHA256 afe9b33376abb1126ef8b230d3f875474d6ac459c62df2ab968c54d1cf848595
 MISC metadata.xml 719 RMD160 51a746fd8407e33d976bf8c423436c0087d74adb SHA1 a610e9c36c277a508f37e28dddb51d8ee85918dc SHA256 af8ffab2f1a5f1864cf1d02d3da9d57202235c0887e7e07054480f8ec61814c6
