@@ -1,11 +1,10 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-plugins/cvs-repo/gentoo-x86/www-plugins/gnash/Attic/gnash-0.8.7.ebuild,v 1.8 2010/07/14 01:03:00 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-plugins/cvs-repo/gentoo-x86/www-plugins/gnash/Attic/gnash-0.8.7.ebuild,v 1.9 2010/08/09 12:55:46 scarabeus Exp $
 
 EAPI="2"
 CMAKE_REQUIRED="never"
 KDE_REQUIRED="optional"
-KDE_MINIMAL="4.2"
 AT_M4DIR="cygnal"
 
 inherit autotools eutils kde4-base multilib nsplugins flag-o-matic
